# IND-Diplomat

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONFIGURE_AND_RUN.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_BLUEPRINT.md  QUICK_START.md  README.md  SECURITY.md  __init__.py  app_server.py  auto_fetch_daemon.py  build_legal_index.py  config.py  core.py  docker-compose.yml  operational_drill.py  project_root.py  pyproject.toml  pytest.ini  requirements.txt  run.py
API/: __init__.py  auth.py  main.py  metrics.py
Config/: config.py  esds_config.py  paths.py  pipeline.py  requirements.txt  runtime_clock.py  thresholds.py
Core/: __init__.py  context.py  investigation_controller.py  layer123_pipeline.py  module_base.py  registry.py  wrappers.py
Frontend/: README.md  __init__.py  analyst.js  app.js  explainable.css  explainable.html  index.html  server.py  styles.css  styles_fixes.css
Scripts/: apply_conflict_state_wire.py  apply_fix123.py  check_dependencies.py  cli.py  configure_first_run.ps1  configure_first_run.sh  console_ui.py  data_feeder.py  debug_imports.py  debug_moltbot.py  debug_sensors.py  debug_tracker.py  deploy_esds.ps1  feeder_ui.py  fetch_gdelt.py  fix_imports.py  get_ollama_models.py  guard_production.py  layer1_sensors.py  run_anomaly_check.py  run_evaluation.py  run_validation_suite.py  seed_knowledge_base.py  setup_environment.ps1  start_infra.ps1  stop_infra.ps1  sync_vectors.py  trace_generator.py  verify_rag.py
SystemGuardian/: __init__.py  global_risk_audit.py  guardian_agent.py  health_check.py  repair_actions.py  requirements.guardian.txt  software.requirements.txt
Utils/: __init__.py  apis.py  audit.py  cache.py  clean_setup.py  country_normalization.py  dpdp.py  edge_cases.py  file_manager.py  logger.py  manager.py  observability.py  parsers.py  rbac.py  reliability.py  report_generator.py  reset_and_copy.py  search.py  session.py  sync_to_aiiiii_dip.py  tracing.py  trade_apis.py  verify_pipeline.py
analysis/: __init__.py  actor_network.py  backtester.py  experiments.py
analysis_api/: __init__.py  endpoints.py  main.py  services.py
analyst_api/: README.md  __init__.py  engine_bridge.py  job_store.py  launch.py  main.py  models.py  trend_store.py
contracts/: __init__.py  observation.py
deploy/: README.md
docs/: CONFIGURE_AND_RUN.md  QUICK_START.md  ROOT_STRUCTURE.md  architecture.md  cv_abhishek_kumar.tex  dataset_status.md  evidence.md  phase2.md  (+1 more)
(+525 files in other folders)
